--- a/pp-01/screen.css
+++ b/pp-01/screen.css
@@ -3,3 +3,26 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,
 menu,nav,section{display:block}html{line-height:1}body{line-height:inherit}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
 /* stylelint-enable */
+
+html {
+  font-size: 1.125em; /* 18 / 16 = 1.125 */
+  line-height: 1.222em; /* 22 / 18 = 1.222*/
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+}
+body {
+  /* padding-top: 1.222em; /* 22 / 18 = 1.222*/ */
+  padding-right: 1.222em; /* 22 / 18 = 1.222*/
+  padding-left: 1.222em; /* 22 / 18 = 1.222*/
+}
+h1 {
+  font-size: 2.369em; /* 42.635 / 18 = 2.369 */
+  line-height: 1.032em; /* 44 / 42.635 = 1.032*/
+  padding-bottom: 1.032em; /* 44 / 42.635 = 1.032*/
+}
+label {
+  display: block;
+}
+li {
+padding-bottom: 1.222em; /* 22 / 18 = 1.222*/
+}
+}
